2007-07-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-refine-ignore-spaces-hunk): Rename from
	diff-refine-hunk.  Adjust users.
	(diff-unified-hunk-p, diff-splittable-p): New functions.
	(diff-mode-menu): Use it to disable Split when it doesn't work.

2007-07-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* diff-mode.el (diff-mode-menu): New entries.

2007-07-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-unified->context): Use the new `apply' undo entry
	if applicable, so as to save undo-log space.

	* diff-mode.el (diff-find-file-name): Add arg `batch'.

	* diff-mode.el (diff-beginning-of-file-and-junk): New function.
	(diff-file-kill): Use it.
	(diff-beginning-of-hunk): Add arg `try-harder' using it.
	(diff-restrict-view, diff-find-source-location, diff-refine-hunk):
	Use it so they find the hunk even when we're in the file header.

2007-07-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-revision-granularity,vc-git-root),
	(vc-git-command,vc-git-dir-state,vc-git-dired-state-info),
	(vc-git-create-repo): New functions.
	(vc-git-registered): New autoloaded function definition.
	(vc-git-registered): Use vc-git-root.
	(vc-git-responsible-p): New defalias.
	(vc-git-annotate-extract-revision-at-line): Uncomment.
	(vc-git-print-log): Add the file name to the log.
	(vc-git-log-view-mode): New derived mode.
	(vc-git-diff,vc-git-annotate-command): Use vc-git-command.

2007-07-22  Michael Albinus  <michael.albinus@gmx.de>

	* progmodes/grep.el (grep-compute-defaults): Keep default values.

2007-07-22  Ralf Angeli  <angeli@caeruleus.net>

	* textmodes/reftex.el (reftex-access-parse-file): Create parse
	file in a way that does not interfere with recentf mode.
	(reftex-access-parse-file): Do not risk destroying an existing
	buffer.

2007-07-22  Alexandre Julliard <julliard@winehq.org>

	* vc-git.el: New file.

2007-07-22  Stefan Monnier  <monnier@iro.umontreal.ca>
