@@ -1,3 +1,9 @@
+2007-07-22  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-git.el (vc-git-register, vc-git-checkin): Use vc-git-command,
+	deal with multiple file arguments.
+	(vc-git-print-log): Deal with multiple file arguments.
+
 2007-07-22  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* diff-mode.el (diff-refine-ignore-spaces-hunk): Rename from
